# src/routes/v2/auth/mod.rs
@@ -8,6 +8,7 @@ mod register;
 mod reset_password;
 mod two_factor;
 mod unlock;
+mod wrapped_dek;
 
 pub fn routes() -> Vec<rocket::Route> {
     rocket::routes![
@@ -20,6 +21,8 @@ pub fn routes() -> Vec<rocket::Route> {
         forgot_password::forgot_password,
         reset_password::reset_password,
         unlock::unlock,
+        wrapped_dek::get_wrapped_dek,
+        wrapped_dek::update_wrapped_dek,
     ]
 }
 
